[gd_scene load_steps=7 format=2]

[ext_resource path="res://img/player_projectile.png" type="Texture" id=1]
[ext_resource path="res://code/Projectile_cached.gd" type="Script" id=2]
[ext_resource path="res://img/star_1.png" type="Texture" id=3]
[ext_resource path="res://img/projectile.png" type="Texture" id=4]
[ext_resource path="res://code/collisionfx.gd" type="Script" id=5]

[sub_resource type="ParticlesMaterial" id=2]
flag_disable_z = true
spread = 30.0
gravity = Vector3( 0, 0, 0 )
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[node name="Projectile" type="Node2D"]
script = ExtResource( 2 )

[node name="collisionfx" type="Particles2D" parent="."]
emitting = false
amount = 4
lifetime = 0.2
one_shot = true
explosiveness = 0.75
process_material = SubResource( 2 )
texture = ExtResource( 3 )
script = ExtResource( 5 )

[node name="main_sprites" type="Node2D" parent="."]

[node name="enemy_sprite" type="Sprite" parent="main_sprites"]
visible = false
z_index = 1
texture = ExtResource( 4 )

[node name="player_sprite" type="Sprite" parent="main_sprites"]
visible = false
z_index = 1
texture = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]
